Add history and login/logout

--- a/main/templates/history.html
+++ b/main/templates/history.html
@@ -4,6 +4,10 @@
 </head>
 <body>
     <h1>History</h1>
-    <a href="/">Show main</a>
+    <a href="/" style="float: right">Show main</a>
+    {% set dataList = data.split("\n") %}
+    {% for item in dataList %}
+        <p>{{ item }}</p>
+    {% endfor %}
 </body>
 </HTML>
